paul-apps/V3/paul-apps/base/app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paulsvc
  name: paulsvc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: paul-app
