paul-apps/V3/paul-apps/base/app2/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: paul2
  name: paul-app2
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: paulsvc2
